crates/puffin-cli/tests/snapshots/pip_compile__allowed_transitive_canonical_url_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--constraint"
    - constraints.txt
    - "--cache-dir"
    - /tmp/.tmph9JKJb
  env:
    VIRTUAL_ENV: /tmp/.tmplckqQ6/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --constraint constraints.txt --cache-dir [CACHE_DIR]
transitive-url-dependency @ https://github.com/astral-sh/ruff/files/13257454/transitive_url_dependency.zip
werkzeug @ git+https://github.com/pallets/werkzeug@af160e0b6b7ddd81c22f1652c728ff5ac72d5c74
    # via transitive-url-dependency

----- stderr -----
Resolved 2 packages in [TIME]

