crates/puffin-cli/tests/snapshots/pip_compile__compile_constraints_inline.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /tmp/.tmpdbA70i
  env:
    VIRTUAL_ENV: /tmp/.tmp3iTWTb/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]

----- stderr -----
Resolved 0 packages in [TIME]

