crates/puffin-cli/tests/snapshots/pip_compile__compile_constraints_txt.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--constraint"
    - constraints.txt
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpVzXpee
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpYmxcVz/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    [BIN_PATH] pip-compile requirements.in --constraint constraints.txt --cache-dir [CACHE_DIR]
asgiref==3.7.2
    # via django
django==5.0b1
sqlparse==0.4.3
    # via
    #   asgiref
    #   django

----- stderr -----
Resolved 3 packages in [TIME]

