crates/puffin-cli/tests/snapshots/pip_compile__compile_does_not_allow_both_extra_and_all_extras.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - pyproject.toml
    - "--all-extras"
    - "--extra"
    - foo
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmp8jSYAG
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpJAMAaC/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the argument '--all-extras' cannot be used with '--extra <EXTRA>'

Usage: puffin pip-compile --all-extras --cache-dir [CACHE_DIR]

For more information, try '--help'.

