crates/puffin-cli/tests/snapshots/pip_compile__compile_git_mismatched_name.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpGuzVHM
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpwgTo7l/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Package metadata name `flask` does not match given name `dask`

